# codesphere-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  integration.yml  publish.yml
examples/: create_workspace_with_landscape.py  sdk_demo.py
examples/__marimo__/session/: sdk_demo.py.json
examples/dashboard/: .env.example  README.md  app.py  requirements.txt
examples/dashboard/static/: style.css
examples/dashboard/templates/: base.html  index.html  team.html  workspace.html
examples/dashboard/templates/partials/: command_output.html  env_vars.html  error.html  git_info.html  logs.html  logs_controls.html  pipeline_status.html  workspace_list.html  workspace_status.html
examples/domains/: create_domain.py  get_domain.py  list_domains.py  update_domain.py
examples/metadata/: get_datacenters.py  get_workspace_base_image.py  get_workspace_plans.py
examples/scripts/: create_workspace_with_landscape.py  delete_all_workspaces.py
examples/teams/: create_team.py  delete_team.py  get_team.py  list_teams.py
examples/teams/domains/: create_domain.py  delete_domain.py  get_domain.py  list_domains.py  update_domain.py  update_workspace_connections.py
examples/workspaces/: create_workspace.py  delete_workspace.py  execute_command.py  get_status.py  get_workspace.py  list_workspace.py  update_workspace.py
examples/workspaces/env-vars/: delete_envvars.py  list_envvars.py  set_envvars.py
src/codesphere/: __init__.py  client.py  config.py  exceptions.py  http_client.py  utils.py
src/codesphere/core/: __init__.py  base.py  handler.py  operations.py
src/codesphere/cs_types/rest/: handler.py  http_client.py  operations.py
src/codesphere/resources/: base.py
src/codesphere/resources/domain/: __init__.py  models.py  resources.py
tests/: conftest.py  test_client.py
tests/core/: __init__.py  test_base.py  test_handler.py  test_operations.py
tests/integration/: __init__.py  conftest.py  test_domains.py  test_env_vars.py  test_git.py  test_landscape.py  test_list_client_injection.py  test_metadata.py  test_teams.py  test_usage.py  test_workspaces.py
tests/resources/: __init__.py  conftest.py
tests/resources/metadata/: __init__.py  test_metadata.py
tests/resources/team/: __init__.py  test_team.py
tests/resources/workspace/: __init__.py  test_workspace.py
(+53 files in other folders)
